2009-09-17  Stefan Monnier  <monnier@iro.umontreal.ca>

	* mouse.el (minor-mode-menu-from-indicator): Pay attention
	to :minor-mode-function (bug#4455).

2009-09-16  Stefan Monnier  <monnier@iro.umontreal.ca>

	* startup.el (command-line): Initialize the window-system after
	processing the command-line.

	* textmodes/page.el (what-page): Make sure we don't inf-loop if
	page-delimiter matches the empty string.

2009-09-16  Glenn Morris  <rgm@gnu.org>

	* emacs-lisp/bytecomp.el (byte-compile-not-obsolete-vars): Rename from
	byte-compile-not-obsolete-var.  It's a list now.
	(byte-compile-not-obsolete-funcs): New variable.
	(byte-compile-warn-obsolete): Don't warn about functions if they are in
	byte-compile-not-obsolete-funcs.
	(byte-compile-variable-ref, byte-compile-defvar): Update for
	byte-compile-not-obsolete-vars name-change and list nature.
	(byte-compile-maybe-guarded): Suppress warnings about obsolete functions
	and variables behind (f)boundp tests.
	* net/tramp-compat.el (byte-compile-not-obsolete-vars): Set if bound.

2009-09-15  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc-git.el (vc-git-log-view-mode): Undo inadvertent change.

2009-09-15  Stefan Monnier  <monnier@iro.umontreal.ca>

	* Makefile.in (compile-onefile): Use byte-compile-refresh-preloaded.
	* emacs-lisp/bytecomp.el (byte-compile-refresh-preloaded):
	Don't autoload.

2009-09-15  Stephen Eglen  <stephen@gnu.org>

	* iswitchb.el (iswitchb-read-buffer): When selecting a match from
	the  virtual-buffers, use the name of the buffer specified by
	find-file-noselect, as the match may be a symlink.  (This was a
	problem if the target and the symlink had differet names.)

2009-09-15  Stefan Monnier  <monnier@iro.umontreal.ca>

	* custom.el (custom-initialize-default, custom-initialize-set): CSE.

	* desktop.el (desktop-path): Check user-emacs-directory.

	* emacs-lisp/bytecomp.el (byte-compile-refresh-preloaded): New function.

	* loadup.el: Use after-load-functions to GC after loading each file.