@@ -144,114 +144,114 @@
   
   ;; define ediff compare menu
   (define-key menu-bar-ediff-menu [window]
-    '(menu-item "This Window and Next Window" compare-windows
-		:help "Compare the current window and the next window"))
+    `(menu-item ,(purecopy "This Window and Next Window") compare-windows
+		:help ,(purecopy "Compare the current window and the next window")))
   (define-key menu-bar-ediff-menu [ediff-windows-linewise]
-    '(menu-item "Windows Line-by-line..." ediff-windows-linewise
-		:help "Compare windows line-wise"))
+    `(menu-item ,(purecopy "Windows Line-by-line...") ediff-windows-linewise
+		:help ,(purecopy "Compare windows line-wise")))
   (define-key menu-bar-ediff-menu [ediff-windows-wordwise]
-    '(menu-item "Windows Word-by-word..." ediff-windows-wordwise
-		:help "Compare windows word-wise"))
+    `(menu-item ,(purecopy "Windows Word-by-word...") ediff-windows-wordwise
+		:help ,(purecopy "Compare windows word-wise")))
   (define-key menu-bar-ediff-menu [separator-ediff-windows] '("--"))
   (define-key menu-bar-ediff-menu [ediff-regions-linewise]
-    '(menu-item "Regions Line-by-line..." ediff-regions-linewise
-		:help "Compare regions line-wise"))
+    `(menu-item ,(purecopy "Regions Line-by-line...") ediff-regions-linewise
+		:help ,(purecopy "Compare regions line-wise")))
   (define-key menu-bar-ediff-menu [ediff-regions-wordwise]
-    '(menu-item "Regions Word-by-word..." ediff-regions-wordwise
-		:help "Compare regions word-wise"))
+    `(menu-item ,(purecopy "Regions Word-by-word...") ediff-regions-wordwise
+		:help ,(purecopy "Compare regions word-wise")))
   (define-key menu-bar-ediff-menu [separator-ediff-regions] '("--"))
   (define-key menu-bar-ediff-menu [ediff-dir-revision]
-    '(menu-item "Directory Revisions..." ediff-directory-revisions
-		:help "Compare directory files with their older versions"))
+    `(menu-item ,(purecopy "Directory Revisions...") ediff-directory-revisions
+		:help ,(purecopy "Compare directory files with their older versions")))
   (define-key menu-bar-ediff-menu [ediff-revision]
-    '(menu-item "File with Revision..." ediff-revision
-		:help "Compare file with its older versions"))
+    `(menu-item ,(purecopy "File with Revision...") ediff-revision
+		:help ,(purecopy "Compare file with its older versions")))
   (define-key menu-bar-ediff-menu [separator-ediff-directories] '("--"))
   (define-key menu-bar-ediff-menu [ediff-directories3]
-    '(menu-item "Three Directories..." ediff-directories3
-		:help "Compare files common to three directories simultaneously"))
+    `(menu-item ,(purecopy "Three Directories...") ediff-directories3
+		:help ,(purecopy "Compare files common to three directories simultaneously")))
   (define-key menu-bar-ediff-menu [ediff-directories]
-    '(menu-item "Two Directories..." ediff-directories
-		:help "Compare files common to two directories simultaneously"))
+    `(menu-item ,(purecopy "Two Directories...") ediff-directories
+		:help ,(purecopy "Compare files common to two directories simultaneously")))
   (define-key menu-bar-ediff-menu [separator-ediff-files] '("--"))
   (define-key menu-bar-ediff-menu [ediff-buffers3]
-    '(menu-item "Three Buffers..." ediff-buffers3
-		:help "Compare three buffers simultaneously"))
+    `(menu-item ,(purecopy "Three Buffers...") ediff-buffers3
+		:help ,(purecopy "Compare three buffers simultaneously")))
   (define-key menu-bar-ediff-menu [ediff-files3]
-    '(menu-item "Three Files..." ediff-files3
-		:help "Compare three files simultaneously"))
+    `(menu-item ,(purecopy "Three Files...") ediff-files3
+		:help ,(purecopy "Compare three files simultaneously")))
   (define-key menu-bar-ediff-menu [ediff-buffers]
-    '(menu-item "Two Buffers..." ediff-buffers
-		:help "Compare two buffers simultaneously"))
+    `(menu-item ,(purecopy "Two Buffers...") ediff-buffers
+		:help ,(purecopy "Compare two buffers simultaneously")))
   (define-key menu-bar-ediff-menu [ediff-files]
-    '(menu-item "Two Files..." ediff-files
-		:help "Compare two files simultaneously"))
+    `(menu-item ,(purecopy "Two Files...") ediff-files
+		:help ,(purecopy "Compare two files simultaneously")))
 
   ;; define ediff merge menu
   (define-key
     menu-bar-ediff-merge-menu [ediff-merge-dir-revisions-with-ancestor]
-    '(menu-item "Directory Revisions with Ancestor..."
+    `(menu-item ,(purecopy "Directory Revisions with Ancestor...")
       ediff-merge-directory-revisions-with-ancestor
-      :help "Merge versions of the files in the same directory by comparing the files with common ancestors"))
+      :help ,(purecopy "Merge versions of the files in the same directory by comparing the files with common ancestors")))
   (define-key
     menu-bar-ediff-merge-menu [ediff-merge-dir-revisions]
-    '(menu-item "Directory Revisions..." ediff-merge-directory-revisions
-      :help "Merge versions of the files in the same directory (without using ancestor information)"))
+    `(menu-item ,(purecopy "Directory Revisions...") ediff-merge-directory-revisions
+      :help ,(purecopy "Merge versions of the files in the same directory (without using ancestor information)")))
   (define-key
     menu-bar-ediff-merge-menu [ediff-merge-revisions-with-ancestor]
-    '(menu-item "Revisions with Ancestor..."
+    `(menu-item ,(purecopy "Revisions with Ancestor...")
       ediff-merge-revisions-with-ancestor
-      :help "Merge versions of the same file by comparing them with a common ancestor"))
+      :help ,(purecopy "Merge versions of the same file by comparing them with a common ancestor")))
   (define-key menu-bar-ediff-merge-menu [ediff-merge-revisions]
-    '(menu-item "Revisions..." ediff-merge-revisions
-      :help "Merge versions of the same file (without using ancestor information)"))
+    `(menu-item ,(purecopy "Revisions...") ediff-merge-revisions
+      :help ,(purecopy "Merge versions of the same file (without using ancestor information)")))
   (define-key menu-bar-ediff-merge-menu [separator-ediff-merge] '("--"))
   (define-key
     menu-bar-ediff-merge-menu [ediff-merge-directories-with-ancestor]
-    '(menu-item "Directories with Ancestor..."
+    `(menu-item ,(purecopy "Directories with Ancestor...")
       ediff-merge-directories-with-ancestor
-      :help "Merge files common to a pair of directories by comparing the files with common ancestors"))
+      :help ,(purecopy "Merge files common to a pair of directories by comparing the files with common ancestors")))
   (define-key menu-bar-ediff-merge-menu [ediff-merge-directories]
-    '(menu-item "Directories..." ediff-merge-directories
-		:help "Merge files common to a pair of directories"))
+    `(menu-item ,(purecopy "Directories...") ediff-merge-directories
+		:help ,(purecopy "Merge files common to a pair of directories")))
   (define-key
     menu-bar-ediff-merge-menu [separator-ediff-merge-dirs] '("--"))
   (define-key
     menu-bar-ediff-merge-menu [ediff-merge-buffers-with-ancestor]
-    '(menu-item "Buffers with Ancestor..." ediff-merge-buffers-with-ancestor
-      :help "Merge buffers by comparing their contents with a common ancestor"))
+    `(menu-item ,(purecopy "Buffers with Ancestor...") ediff-merge-buffers-with-ancestor
+      :help ,(purecopy "Merge buffers by comparing their contents with a common ancestor")))
   (define-key menu-bar-ediff-merge-menu [ediff-merge-buffers]
-    '(menu-item "Buffers..." ediff-merge-buffers
-      :help "Merge buffers (without using ancestor information)"))
+    `(menu-item ,(purecopy "Buffers...") ediff-merge-buffers
+      :help ,(purecopy "Merge buffers (without using ancestor information)")))
   (define-key menu-bar-ediff-merge-menu [ediff-merge-files-with-ancestor]
-    '(menu-item "Files with Ancestor..." ediff-merge-files-with-ancestor
-      :help "Merge files by comparing them with a common ancestor"))
+    `(menu-item ,(purecopy "Files with Ancestor...") ediff-merge-files-with-ancestor
+      :help ,(purecopy "Merge files by comparing them with a common ancestor")))
   (define-key menu-bar-ediff-merge-menu [ediff-merge-files]
-    '(menu-item "Files..." ediff-merge-files
-      :help "Merge files (without using ancestor information)"))
+    `(menu-item ,(purecopy "Files...") ediff-merge-files
+      :help ,(purecopy "Merge files (without using ancestor information)")))
 
   ;; define epatch menu
   (define-key menu-bar-epatch-menu [ediff-patch-buffer]
-    '(menu-item "To a Buffer..." ediff-patch-buffer
-      :help "Apply a patch to the contents of a buffer"))
+    `(menu-item ,(purecopy "To a Buffer...") ediff-patch-buffer
+      :help ,(purecopy "Apply a patch to the contents of a buffer")))
   (define-key menu-bar-epatch-menu [ediff-patch-file]
-    '(menu-item "To a File..." ediff-patch-file
-      :help "Apply a patch to a file"))
+    `(menu-item ,(purecopy "To a File...") ediff-patch-file
+      :help ,(purecopy "Apply a patch to a file")))
 
   ;; define ediff miscellanea
   (define-key menu-bar-ediff-misc-menu [emultiframe]
-    '(menu-item "Toggle use of separate control buffer frame"
+    `(menu-item ,(purecopy "Use separate control buffer frame")
       ediff-toggle-multiframe
-      :help "Switch between the single-frame presentation mode and the multi-frame mode"))
+      :help ,(purecopy "Switch between the single-frame presentation mode and the multi-frame mode")))
   (define-key menu-bar-ediff-misc-menu [eregistry]
-    '(menu-item "List Ediff Sessions" ediff-show-registry
-		:help "List all active Ediff sessions; it is a convenient way to find and resume such a session"))
+    `(menu-item ,(purecopy "List Ediff Sessions") ediff-show-registry
+		:help ,(purecopy "List all active Ediff sessions; it is a convenient way to find and resume such a session")))
   (define-key menu-bar-ediff-misc-menu [ediff-cust]
-    '(menu-item "Customize Ediff" ediff-customize
-		:help "Change some of the parameters that govern the behavior of Ediff"))
+    `(menu-item ,(purecopy "Customize Ediff") ediff-customize
+		:help ,(purecopy "Change some of the parameters that govern the behavior of Ediff")))
   (define-key menu-bar-ediff-misc-menu [ediff-doc]
-    '(menu-item "Ediff Manual" ediff-documentation
-		:help "Bring up the Ediff manual")))
+    `(menu-item ,(purecopy "Ediff Manual") ediff-documentation
+		:help ,(purecopy "Bring up the Ediff manual"))))
 
 (provide 'ediff-hook)
 
